<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:padding="2dp"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<TextView
    android:textSize="16sp"
    android:textStyle="bold"
    android:fontFamily="@font/myfont"
    style="@style/AppTheme"
    android:padding="4dp"
    android:id="@+id/question"
    android:text="@string/question"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    ></TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <TextView

        style="@style/AppTheme"
        android:fontFamily="@font/myfont"
        android:textSize="16dp"
        android:padding="4dp"
        android:text="@string/ans1"
        android:id="@+id/yourans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
                <ImageView
                    android:id="@+id/answercheck"
                    android:src="@drawable/correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></ImageView>
            </LinearLayout>
    <TextView
        style="@style/AppTheme"
        android:textSize="16dp"
        android:padding="4dp"
        android:text="@string/ans2"
        android:id="@+id/correctans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>