<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainOption">
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <TextView
        android:textColor="#fff"
        android:textSize="18dp"
        android:text="Select your Language"
        android:layout_gravity="right"
        android:id="@+id/setMainlanguage"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:drawableRight="@drawable/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/river_system"
        android:layout_width="180dp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:contentPadding="7dp"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="7dp"
        app:cardPreventCornerOverlap="false">
        <RelativeLayout
            android:id="@+id/relat1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/river_system_image"
                android:layout_width="133dp"
                android:layout_height="146dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mapimg"
                app:civ_border_color="@color/bkg_card"
                app:civ_border_width="2dp" />
            <TextView
                android:gravity="center"
                android:id="@+id/r_system_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/River_system"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:textStyle="bold"
                android:paddingTop="10dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/notes"
            android:layout_width="180dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content"
            card_view:cardElevation="3dp"
            card_view:contentPadding="7dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="false">
            <RelativeLayout
                android:id="@+id/relat2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/notes_image"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/river"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/bkg_card"/>
                <TextView
                    android:id="@+id/notes_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/notes"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/quiz"
            android:layout_width="180dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content"
            card_view:cardElevation="3dp"
            card_view:contentPadding="7dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="false">
            <RelativeLayout
                android:id="@+id/relat3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/quiz_image"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/quiz"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/bkg_card"/>

                <TextView
                    android:gravity="center"
                    android:id="@+id/quiz_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/quiz"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/suggestion"
            android:layout_width="180dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            app:contentPadding="7dp"
            app:cardCornerRadius="12dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="false">
            <RelativeLayout
                android:id="@+id/relat4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/suggestion_image"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/suggest"
                    app:civ_border_color="@color/bkg_card"
                    app:civ_border_width="2dp" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/suggestion_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/suggestion"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</LinearLayout>